# Go2_navigation

./: .gitignore  README.md  REPLANNING_FIX_SUMMARY.md  Sim2Real-Prompt  kill_ros_nodes.sh  requirement.txt
documentation/: .gitignore  bibliography.bib  (+1 more)
install/a_star_mpc_planner/share/a_star_mpc_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/a_star_mpc_planner/share/a_star_mpc_planner/config/: planner_params.yaml
install/d1_sim/share/d1_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/d1_sim/share/d1_sim/cmake/: d1_simConfig.cmake
install/go2_bringup/share/go2_bringup/: local_setup.sh  package.sh  package.xml
install/go2_bringup/share/go2_bringup/cmake/: go2_bringupConfig.cmake
install/go2_bringup/share/go2_bringup/launch/: go2_hardware.launch.py
install/go2_sim/share/go2_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/go2_sim/share/go2_sim/cmake/: go2_simConfig-version.cmake  go2_simConfig.cmake
install/go2_sim/share/go2_sim/config/: gait.yaml  joints.yaml  links.yaml  ros_control.yaml
install/go2_sim/share/go2_sim/environment/: ament_prefix_path.dsv  path.dsv
install/go2_sim/share/go2_sim/launch/: sim_champ.launch.py
install/go2_sim/share/go2_sim/urdf/: const.xacro  go2_sim.urdf.xacro  leg.xacro  materials.xacro
install/go2_sim/share/go2_sim/worlds/: default.sdf
install/robot_common_interfaces/share/robot_common_interfaces/: local_setup.sh  package.sh  package.xml
install/robot_common_interfaces/share/robot_common_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_robot_common_interfaces__rosidl_generator_cExport.cmake  export_robot_common_interfaces__rosidl_generator_cppExport.cmake  export_robot_common_interfaces__rosidl_generator_pyExport.cmake  export_robot_common_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_robot_common_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  robot_common_interfacesConfig.cmake  robot_common_interfaces__rosidl_typesupport_cExport.cmake  robot_common_interfaces__rosidl_typesupport_cppExport.cmake  robot_common_interfaces__rosidl_typesupport_introspection_cExport.cmake  robot_common_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/robot_common_interfaces/share/robot_common_interfaces/msg/: RobotStatus.idl  RobotStatus.msg
install/robot_sim/share/robot_sim/: local_setup.sh  package.sh  package.xml
install/robot_sim/share/robot_sim/cmake/: robot_simConfig.cmake
install/robot_sim/share/robot_sim/config/: nav2_sim_params.yaml  sim_params.yaml
install/robot_sim/share/robot_sim/launch/: sim_champ_bringup.launch.py
install/robot_sim/share/robot_sim/worlds/: empty.world
install/unitree_go/share/unitree_go/: local_setup.sh  package.sh  package.xml
install/unitree_go/share/unitree_go/cmake/: ament_cmake_export_dependencies-extras.cmake  export_unitree_go__rosidl_generator_cExport.cmake  export_unitree_go__rosidl_generator_cppExport.cmake  export_unitree_go__rosidl_generator_pyExport.cmake  export_unitree_go__rosidl_typesupport_fastrtps_cExport.cmake  export_unitree_go__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  unitree_goConfig.cmake  unitree_go__rosidl_typesupport_cExport.cmake  unitree_go__rosidl_typesupport_cppExport.cmake  unitree_go__rosidl_typesupport_introspection_cExport.cmake  unitree_go__rosidl_typesupport_introspection_cppExport.cmake
src/go2_bringup/: CMakeLists.txt  README.md
src/go2_bringup/config/: go2_params.yaml
src/go2_bringup/launch/: go2_bringup.launch.py  go2_nav_rviz.launch.py
src/go2_bringup/src/: go2_hw_bridge.cpp  sport_client.cpp
src/graphnav_mpc_planner/: package.xml  setup.cfg  setup.py
src/graphnav_mpc_planner/config/: graphnav_mpc_params.yaml
src/graphnav_mpc_planner/graphnav_mpc_planner/: graph_planner.py  mock_nav_graph_publisher.py  mpc_node.py  mpc_tracker.py  odom_to_pose_node.py  planner_node.py  setpoint_to_cmd_vel_node.py
src/graphnav_mpc_planner/launch/: graphnav_mpc_planner.launch.py
src/graphnav_mpc_planner/rviz/: graphnav_mpc.rviz
src/graphnav_msgs/: CMakeLists.txt  package.xml
src/graphnav_msgs/msg/: Edge.msg  EdgeTraversability.msg  NavigationGraph.msg  Node.msg
src/path_follower/: CMakeLists.txt  package.xml
src/path_follower/src/: path_follower_node.cpp
src/robot_nav/: CMakeLists.txt  README.md  package.xml
src/robot_nav/config/: ekf_fusion_params.yaml  nav2_params.yaml  scan_from_cloud.yaml
src/robot_safety/: CMakeLists.txt  README.md  package.xml
src/robot_safety/scripts/: dynamic_obstacle_tracker.py  velocity_limiter_node.py
src/robot_sim/: CMakeLists.txt  README.md  package.xml
src/robot_sim/launch/: planner.launch.py  sim_a_star_mpc.launch.py  sim_bringup.launch.py  sim_champ_bringup.launch.py  sim_graphnav_mpc.launch.py  sim_nav.launch.py
src/robot_sim/rviz/: a_star_mpc.rviz  sim_odom.rviz
src/robot_sim/scripts/: cloud_self_filter.py  mock_nav_graph_publisher.py
src/sensor_models/: CMakeLists.txt  package.xml
src/sensor_models/urdf/: l1_lidar.urdf.xacro  stereo_camera.urdf.xacro
src/sim_scenarios/: package.xml  setup.cfg  setup.py
src/sim_scenarios/scenarios/: crowded_room.yaml  narrow_corridor.yaml
src/sim_scenarios/sim_scenarios/: scenario_manager_node.py  spawn_obstacle.py
src/sim_worlds/: CMakeLists.txt  package.xml
src/sim_worlds/models/obstacle_cylinder/: model.config
src/sim_worlds/models/obstacle_wall/: model.config
src/sim_worlds/worlds/: indoor_office.world  navigation_empty.world  warehouse.world
src/unitree_api/: CMakeLists.txt  package.xml
src/unitree_go/: CMakeLists.txt
src/wildos_graphnav_planner/: CMakeLists.txt  package.xml
src/wildos_graphnav_planner/include/wildos_graphnav_planner/: planner.hpp
src/wildos_graphnav_planner/launch/: wildos_graphnav_planner.launch.py
src/wildos_graphnav_planner/src/: planner.cpp  planner_node.cpp
(+180 files in other folders)
