<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>graphnav_mpc_planner</name>
  <version>0.1.0</version>
  <description>
    Graph-based navigation planner with MPC trajectory tracking.
    Replaces the path-follower with a CasADi/IPOPT MPC tracker for smooth,
    obstacle-aware trajectory execution on top of graphnav Dijkstra paths.
  </description>
  <maintainer email="ortolore@gmail.com">Lorenzo Ortolani</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>graphnav_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
