<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_nav</name>
  <version>0.1.0</version>
  <description>
    Robot-agnostic Nav2 configuration and launch files.
    This package does NOT contain any robot-specific code.
    All robot-specific parameters (footprint, speeds, sensor topics) are passed
    in via launch arguments or YAML overrides from the bringup package.

    Works with any robot that satisfies the frame/topic contract defined in
    robot_common_interfaces/README.md.
  </description>
  <maintainer email="todo@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <!-- 2D SLAM — LGPL-2.1, compatible with industrial deployments via dynamic linking -->
  <exec_depend>slam_toolbox</exec_depend>
  <!-- PointCloud2 → LaserScan conversion for slam_toolbox input — BSD-3-Clause -->
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
