<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_models</name>
  <version>0.1.1</version>
  <description>
    Reusable xacro sensor macros for Gazebo simulation.

    Two macros for the Unitree L1 LiDAR:
      l1_lidar       — Gazebo Fortress (Ignition Gazebo 6, ROS 2 Humble)
                       Uses gpu_lidar sensor type, ignition_frame_id.
                       Interface: parent, prefix, *origin (block).
      l1_lidar_gazebo — Gazebo Classic (Gazebo 11) — legacy robot_sim pipeline.
                        Uses gpu_ray + libgazebo_ros_ray_sensor.

    Add new macros here when porting to additional robot platforms.
  </description>
  <maintainer email="todo@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
