<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_worlds</name>
  <version>0.1.0</version>
  <description>
    Gazebo Classic (Gazebo 11) world files and SDF obstacle models.

    Worlds:
      navigation_empty.world — flat 20×15 m room, good for first-run testing
      warehouse.world        — 30×20 m warehouse with shelving rows
      indoor_office.world    — 20×15 m office with partitions and desks

    Obstacle models (in models/):
      obstacle_box      — 0.60×0.40×1.00 m crate  (blue)
      obstacle_cylinder — r=0.20 m, h=1.00 m post  (orange)
      obstacle_wall     — 2.00×0.10×0.80 m wall     (grey)
      obstacle_pallet   — 1.20×0.80×0.14 m pallet   (brown)

    To use: set GAZEBO_MODEL_PATH to share/sim_worlds/models (done by sim_bringup.launch.py).
    Runtime spawning is handled by sim_scenarios/scenario_manager_node.
  </description>
  <maintainer email="todo@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
