<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a_star_mpc_planner</name>
  <version>0.1.0</version>
  <description>A* path planner with MPC trajectory tracking for Go2 quadruped navigation</description>
  <maintainer email="lorenzo@example.com">Lorenzo Ortolani</maintainer>
  <license>MIT</license>

  <author email="lorenzo@example.com">Lorenzo Ortolani</author>

  <!-- ROS Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs_py</depend>

  <!-- Build/Runtime Dependencies -->
  <depend>numpy</depend>
  <depend>scipy</depend>
  <depend>casadi</depend>

  <!-- Build Tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
</package>
