<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_bringup</name>
  <version>0.1.0</version>
  <description>
    Go2-specific hardware adapter and bringup package.

    go2_hw_bridge node:
      - Converts SportModeState (Go2 proprioceptive state) to nav_msgs/Odometry
        and TF odom → base_footprint.
      - Converts geometry_msgs/Twist (from Nav2) to Unitree sport API Move commands
        published on /api/sport/request.
      - cmd_vel watchdog: sends StopMove if Nav2 stops publishing for cmd_timeout seconds.
      - Publishes robot_common_interfaces/RobotStatus at 1 Hz.

    All other packages are robot-agnostic.

    External build dep: nlohmann-json3-dev (MIT licence)
      sudo apt install nlohmann-json3-dev

    TODO(agibot): Create agibot_d1_bringup with the same launch/config structure.
  </description>
  <maintainer email="todo@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>unitree_api</depend>
  <depend>unitree_go</depend>
  <depend>robot_common_interfaces</depend>

  <!-- nlohmann/json: system header-only library, MIT licence.
       rosdep key 'nlohmann-json-dev' resolves to apt nlohmann-json3-dev. -->
  <build_depend>nlohmann-json-dev</build_depend>

  <exec_depend>go2_description</exec_depend>
  <exec_depend>robot_safety</exec_depend>
  <exec_depend>robot_nav</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
