<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_sim</name>
  <version>0.2.0</version>
  <description>
    Go2 Gazebo Fortress (Ignition Gazebo 6) + CHAMP simulation.

    Provides go2_sim.urdf.xacro with:
      - Fully articulated 12-DOF leg model (from khaledgabr77/unitree_go2_ros2)
      - CHAMP-convention foot links: LF_FOOT, RF_FOOT, LH_FOOT, RH_FOOT
      - Foot contact sensors (Fortress contact sensor syntax)
      - IMU sensor at imu_link (200 Hz, Fortress imu sensor syntax)
      - Unitree L1 LiDAR via sensor_models/l1_lidar macro → /lidar/points (bridged)
      - ign_ros2_control effort joint trajectory controller (12 joints)
      - Joint state publisher → /joint_states

    Launch:
      ros2 launch go2_sim sim_champ.launch.py

    Fortress packages required (ROS 2 Humble):
      ros-humble-ros-ign-bridge
      ros-humble-ros-ign-gazebo
      ros-humble-ign-ros2-control
      ros-humble-champ-base
      ros-humble-robot-localization
  </description>
  <maintainer email="todo@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime: Fortress simulation bridge and control -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>robot_safety</exec_depend>

  <!-- CHAMP locomotion stack -->
  <exec_depend>champ_base</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Sensor macro -->
  <exec_depend>sensor_models</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
