<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_common_interfaces</name>
  <version>0.1.0</version>
  <description>
    Shared ROS 2 message types and the robot interface contract.
    All hardware adapters (go2_bringup, future agibot_d1_bringup) must publish
    to the topics defined in this package's README and satisfy the frame contract
    described here.

    Kept deliberately minimal — only add message types that cannot be expressed
    with standard ROS 2 messages.
  </description>
  <maintainer email="todo@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
